tests/paczka1/small_fuzzy/69972275.err
Error in line 1: O50Rx A929 12,7
Error in line 4: hV7Xh A929 88,5
Error in line 6: hV7Xh A317 16,0
Error in line 5: O50Rx A317 179,5
Error in line 8: O50Rx A39 37,9
